--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="" >
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
   </head>
-  <body class="bg-slate-50">
+  <body class=" bg-slate-50 dark:bg-slate-900 transition-all duration-500 ease-in-out">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
