--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
 <body class="bg-bunker-100 dark:bg-[#283747] transition-all duration-500 ease-in-out">
   <div id="root"></div>  
+  
+  <script src="https://cdn.lordicon.com/lordicon.js"></script>
   <script type="module" src="/src/main.jsx"></script>
 </body>
 
