--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Vite + React</title>
 </head>
 
-<body class="bg-bunker-100 dark:bg-[#283747] transition-all duration-500 ease-in-out">
+<body class="bg-bunker-100 dark:bg-nile-blue-800 transition-all duration-500 ease-in-out">
   <div id="root"></div>  
   
   <script src="https://cdn.lordicon.com/lordicon.js"></script>
