--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <div id="root"></div>  
   
   <script src="https://cdn.lordicon.com/lordicon.js"></script>
+  <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
   <script type="module" src="/src/main.jsx"></script>
 </body>
 
