--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite + React</title>
+  <title>VivaGear Tech</title>
 </head>
 
 <body class="bg-bunker-100 dark:bg-nile-blue-800 transition-all duration-500 ease-in-out">
