--- a/index.html
+++ b/index.html
@@ -3,16 +3,30 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <meta name="keywords" content="parlante,auriculares,consolas,tecnología">
+  <meta name="description"
+    content="¿Buscas el regalo perfecto para esa persona especial? En nuestra web encontrarás una gran variedad de productos tech. Tenemos Parlanates, auriculares y consolas de las mejores marcas, gustos y presupuestos. Entra y descubre nuestro catálogo, ofertas y envíos gratis. ¡No te arrepentirás!">
+  <meta name="author" content="Cesar Aquino Tello">
+  <meta name="copyright" content="Cesar Aquino Tello">
+  <meta property="og:title" content=E-commerce>
+  <meta property="og:site_name" content=VivaGearTech>
+  <meta property="og:url" content="https://e-commerce-nu-liard.vercel.app/">
+  <meta property="og:description"
+    content="¿Buscas el regalo perfecto para esa persona especial? En nuestra web encontrarás una gran variedad de productos tech. Tenemos Parlanates, auriculares y consolas de las mejores marcas, gustos y presupuestos. Entra y descubre nuestro catálogo, ofertas y envíos gratis. ¡No te arrepentirás!">
+  <meta property="og:type" content=website>
+  <meta property="og:image" content="">
+
   <title>VivaGear Tech</title>
 </head>
 
 <body class="bg-bunker-100 dark:bg-nile-blue-800 transition-all duration-500 ease-in-out">
-  <div id="root"></div>  
-  
+  <div id="root"></div>
+
   <script src="https://cdn.lordicon.com/lordicon.js"></script>
-  <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+  <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script>
   <script type="module" src="/src/main.jsx"></script>
 </body>
 
