--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <meta property="og:description"
     content="¿Buscas el regalo perfecto para esa persona especial? En nuestra web encontrarás una gran variedad de productos tech. Tenemos Parlanates, auriculares y consolas de las mejores marcas, gustos y presupuestos. Entra y descubre nuestro catálogo, ofertas y envíos gratis. ¡No te arrepentirás!">
   <meta property="og:type" content=website>
-  <meta property="og:image" content="">
+  <meta property="og:image" content="https://i.postimg.cc/x8H1Qpwk/Captura-de-pantalla-2024-02-26-000726.png">
 
   <title>VivaGear Tech</title>
 </head>
